--- a/app/src/main/res/layouts/fragment/layout/bonuses_selection_layout.xml
+++ b/app/src/main/res/layouts/fragment/layout/bonuses_selection_layout.xml
@@ -93,6 +93,21 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
+                android:id="@+id/buttonTest"
+                style="@android:style/Widget.Holo.Button.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:drawableStart="@drawable/ic_navigate_before_black_24dp"
+                android:drawableTint="#db3812"
+                android:text="Validation"
+                android:textColor="#db3812"
+                android:textSize="@dimen/_8sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
                 android:id="@+id/buttonNext"
                 style="@android:style/Widget.Holo.Button.Small"
                 android:layout_width="wrap_content"
