--- a/app/src/main/res/layout/activity_charactere_display.xml
+++ b/app/src/main/res/layout/activity_charactere_display.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="44dp"
             android:fontFamily="@font/balthazar"
             android:text="name"
             android:textSize="@dimen/_20sdp"
@@ -34,7 +34,8 @@
             android:textSize="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="@+id/name"
             app:layout_constraintStart_toEndOf="@+id/name"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/classe"
@@ -47,7 +48,8 @@
             android:textSize="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="@+id/race"
             app:layout_constraintStart_toEndOf="@+id/race"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/level"
@@ -60,7 +62,8 @@
             android:textSize="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="@+id/classe"
             app:layout_constraintStart_toEndOf="@+id/classe"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/charac1"
@@ -250,6 +253,15 @@
             app:layout_constraintEnd_toEndOf="@+id/textView11"
             app:layout_constraintStart_toStartOf="@+id/textView11"
             app:layout_constraintTop_toBottomOf="@+id/trait" />
+
+        <Button
+            android:id="@+id/retour"
+            android:layout_width="86dp"
+            android:layout_height="35dp"
+            android:onClick="retour"
+            android:text="retour"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
