--- a/app/src/main/res/layouts/adapter/layout/character_selection_view.xml
+++ b/app/src/main/res/layouts/adapter/layout/character_selection_view.xml
@@ -79,10 +79,11 @@
                             android:id="@+id/textViewName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="2"
                             android:fontFamily="@string/main_font"
-                            android:text="TextView"
                             android:textColor="#642D04"
-                            android:textSize="@dimen/CharacterSelectionViewTextSize" />
+                            android:textSize="@dimen/CharacterSelectionViewTextSize"
+                            tools:text="CharacterName" />
 
                     </TableRow>
 
@@ -105,10 +106,11 @@
                             android:id="@+id/textViewRace"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="2"
                             android:fontFamily="@string/main_font"
-                            android:text="TextView"
                             android:textColor="#642D04"
-                            android:textSize="@dimen/CharacterSelectionViewTextSize" />
+                            android:textSize="@dimen/CharacterSelectionViewTextSize"
+                            tools:text="CharacterRace" />
 
                     </TableRow>
 
@@ -130,10 +132,11 @@
                             android:id="@+id/textViewClass"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="2"
                             android:fontFamily="@string/main_font"
-                            android:text="TextView"
                             android:textColor="#642D04"
-                            android:textSize="@dimen/CharacterSelectionViewTextSize" />
+                            android:textSize="@dimen/CharacterSelectionViewTextSize"
+                            tools:text="CharacterClass" />
 
                     </TableRow>
 
@@ -155,10 +158,11 @@
                             android:id="@+id/textViewAlignement"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="2"
                             android:fontFamily="@string/main_font"
-                            android:text="TextView je suis un nom vachement long quand même"
                             android:textColor="#642D04"
-                            android:textSize="@dimen/CharacterSelectionViewTextSize" />
+                            android:textSize="@dimen/CharacterSelectionViewTextSize"
+                            tools:text="TextView je suis un nom vachement long quand même" />
 
                     </TableRow>
 
@@ -181,11 +185,12 @@
                             android:id="@+id/textViewLevel"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="2"
                             android:fontFamily="@string/main_font"
                             android:inputType="number"
-                            android:text="TextView"
                             android:textColor="#642D04"
-                            android:textSize="@dimen/CharacterSelectionViewTextSize" />
+                            android:textSize="@dimen/CharacterSelectionViewTextSize"
+                            tools:text="1" />
                     </TableRow>
 
                 </TableLayout>
